--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-auto-form",
-  "description": "AutoForm React component which handles getting form input onChange and onSubmit",
-  "version": "1.0.0",
+  "description": "A React component which simplifies getting user input from forms onChange and onSubmit",
+  "version": "1.1.0",
   "main": "./lib/index.js",
   "standalone": "AutoForm",
   "homepage": "https://github.com/insin/react-auto-form",
