--- a/package.json
+++ b/package.json
@@ -4,29 +4,20 @@
   "version": "1.2.3",
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
-  "standalone": "AutoForm",
+  "global": "AutoForm",
+  "externals": {
+    "react": "React"
+  },
   "homepage": "https://github.com/insin/react-auto-form",
   "license": "MIT",
   "author": "Jonny Buchanan <jonathan.buchanan@gmail.com>",
   "scripts": {
-    "build": "babel src --out-dir lib",
-    "build:demo": "webpack --config=webpack.demo.config.js",
-    "build:umd": "webpack && webpack --config=webpack.prod.config.js",
-    "clean": "rimraf lib dist",
-    "clean:demo": "rimraf demo/dist",
-    "demo": "heatpack demo/src/app.js",
-    "dist": "npm run lint && npm run clean && npm run build && npm run build:umd && npm run dist:demo",
-    "dist:demo": "npm run lint:demo && npm run clean:demo && npm run build:demo",
-    "lint": "eslint src",
-    "lint:demo": "eslint demo/src",
-    "lint:fix": "eslint src --fix",
-    "test": "npm run lint && npm run test:unit",
-    "test:unit": "karma start"
+    "test": "nwb test"
   },
   "files": [
-    "dist",
     "lib",
-    "src"
+    "src",
+    "umd"
   ],
   "dependencies": {
     "get-form-data": "^1.2.3"
@@ -35,42 +26,10 @@
     "react": ">=0.12.0"
   },
   "devDependencies": {
+    "nwb": "*",
     "react": "0.14.2",
-    "react-dom": "0.14.2",
-
-    "babel": "5.8.29",
-    "babel-core": "5.8.33",
-
-    "eslint": "1.9.0",
-    "babel-eslint": "4.1.5",
-    "eslint-config-standard": "4.4.0",
-    "eslint-config-standard-react": "1.1.0",
-    "eslint-plugin-react": "3.8.0",
-    "eslint-plugin-standard": "1.3.1",
-
-    "karma": "0.13.15",
-    "codecov.io": "0.1.6",
-    "isparta-loader": "1.0.0",
-    "karma-coverage": "0.5.3",
-    "karma-phantomjs-launcher": "0.2.1",
-    "karma-sourcemap-loader": "0.3.6",
-    "karma-tap": "1.0.3",
-    "karma-webpack": "1.7.0",
-    "phantomjs": "1.9.18",
-    "phantomjs-polyfill": "0.0.1",
     "react-addons-test-utils": "0.14.2",
-    "tape": "4.2.2",
-
-    "webpack": "1.12.3",
-    "babel-loader": "5.3.3",
-    "css-loader": "0.22.0",
-    "extract-text-webpack-plugin": "0.9.1",
-    "file-loader": "0.8.4",
-    "html-webpack-plugin": "1.6.2",
-    "json-loader": "0.5.3",
-    "style-loader": "0.13.0",
-
-    "rimraf": "2.4.3"
+    "react-dom": "0.14.2"
   },
   "repository": {
     "type": "git",
