--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "npm run lint && nwb build",
     "lint": "eslint src test",
     "start": "nwb serve",
-    "test": "npm run build && nwb test"
+    "test": "npm run build && nwb test",
+    "test:watch": "nwb test --server"
   },
   "dependencies": {
     "get-form-data": "1.2.x"
@@ -22,13 +23,11 @@
     "react": ">=0.12.0"
   },
   "devDependencies": {
-    "eslint-config-jonnybuchanan": "2.0.x",
-    "karma-tap": "1.0.3",
-    "nwb": "0.6.x",
+    "eslint-config-jonnybuchanan": "3.2.1",
+    "nwb": "0.11.0",
     "react": "0.14.x",
     "react-addons-test-utils": "0.14.x",
-    "react-dom": "0.14.x",
-    "tape": "4.4.0"
+    "react-dom": "0.14.x"
   },
   "author": "Jonny Buchanan <jonathan.buchanan@gmail.com>",
   "homepage": "https://github.com/insin/react-auto-form",
