--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.3.0",
   "description": "Simplifies getting user input from basic forms via onChange and onSubmit events",
   "main": "lib/index.js",
-  "jsnext:main": "src/index.js",
+  "module": "es/index.js",
   "files": [
-    "es6",
+    "es",
     "lib",
     "umd"
   ],
@@ -18,17 +18,17 @@
     "test:watch": "nwb test --server"
   },
   "dependencies": {
-    "get-form-data": "1.2.x"
+    "get-form-data": "1.2.x",
+    "prop-types": "^15.5.7"
   },
   "peerDependencies": {
-    "react": ">=0.12.0"
+    "react": ">=0.14.9"
   },
   "devDependencies": {
-    "eslint-config-jonnybuchanan": "3.2.1",
-    "nwb": "0.11.0",
-    "react": "15.2.1",
-    "react-addons-test-utils": "15.2.1",
-    "react-dom": "15.2.1"
+    "eslint-config-jonnybuchanan": "5.0.x",
+    "nwb": "0.20.x",
+    "react": "16.x",
+    "react-dom": "16.x"
   },
   "author": "Jonny Buchanan <jonathan.buchanan@gmail.com>",
   "homepage": "https://github.com/insin/react-auto-form",
