--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-auto-form",
-  "version": "2.0.0",
-  "description": "Simplifies getting user input from basic forms via onChange and onSubmit events",
+  "version": "3.0.0",
+  "description": "Simplifies getting user input from forms via onChange and onSubmit events",
   "main": "lib/index.js",
   "module": "es/index.js",
   "files": [
@@ -40,6 +40,8 @@
   "keywords": [
     "react",
     "react-component",
+    "uncontrolled",
+    "uncontrolled-forms",
     "form",
     "forms"
   ]
